Create playing board in html and css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
         <script src="script.js" defer></script>
     </head>
     <body>
-        
+        <div class="board">
+            <div class="board-cell" data-value=""></div>
+            <div class="board-cell" data-value=""></div>
+            <div class="board-cell" data-value=""></div>
+            <div class="board-cell" data-value=""></div>
+            <div class="board-cell" data-value=""></div>
+            <div class="board-cell" data-value=""></div>
+            <div class="board-cell" data-value=""></div>
+            <div class="board-cell" data-value=""></div>
+            <div class="board-cell" data-value=""></div>
+        </div>
     </body>
 </html>
