Implement AI and fix misc bugs

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <div class="player-two-info">
                 <h2>Player Two Name:</h2>
                 <input type="text" name="player-two-name" id="player-two-name">
+                <div class="player-info-item">
+                    <label for="player-two-is-ai">SKYNET?</label>
+                    <input type="checkbox" name="player-two-is-ai" id="player-two-is-ai">
+                </div>
             </div>
         </div>
     </body>
